# Simple_Droid_cam_client_Improved

./: README.md
simple-droidcam-client-0.8.0_fully_working/: README.md  ar.com.softwareperonista.SimpleDroidCamClient.json  meson.build
simple-droidcam-client-0.8.0_fully_working/codestyle/: pre-commit  uncrustify.cfg
simple-droidcam-client-0.8.0_fully_working/config/: config.vapi  meson.build
simple-droidcam-client-0.8.0_fully_working/data/: ar.com.softwareperonista.SimpleDroidCamClient.appdata.xml.in  ar.com.softwareperonista.SimpleDroidCamClient.desktop.in  ar.com.softwareperonista.SimpleDroidCamClient.gschema.xml  meson.build
simple-droidcam-client-0.8.0_fully_working/db/: meson.build  simple_droidcam_client_base_de_datos_definicion.sql  simple_droidcam_client_db.gresource.xml
simple-droidcam-client-0.8.0_fully_working/icon/: meson.build
simple-droidcam-client-0.8.0_fully_working/po/: POTFILES  es.po  meson.build  simple_droidcam_client.pot
simple-droidcam-client-0.8.0_fully_working/src/: meson.build  simple_droidcam_client_application_window.vala  simple_droidcam_client_main.vala
simple-droidcam-client-0.8.0_fully_working/ui/: meson.build  simple_droidcam_client_application_window.ui  simple_droidcam_client_main_menu.ui  simple_droidcam_client_ui.gresource.xml
