icondir = join_paths(get_option('datadir'), 'icons/hicolor')

install_data('ar.com.softwareperonista.SimpleDroidCamClient.svg',
  install_dir: join_paths(icondir, 'scalable/apps'),
)

install_data('ar.com.softwareperonista.SimpleDroidCamClient-symbolic.svg',
  install_dir: join_paths(icondir, 'symbolic/apps'),
)

